      (reported by Chris Papademetrious, fix by Vadim Repin from RT #117184).

    - [RT #44877] GIFs containing comments or plain-text representations will no
      longer result in an error (reported by Chris Czub).

    - [RT #132844] Fix corruption when a PGM image is included (reported by Jeff
      Ratcliffe, fix by Vadim Repin).

    - Expand PNM support to include all image types.


2.040     2021-04-13

    - Fix open() followed by stringify() resulting in a corrupt (mostly-empty)
      PDF, which was broken by changes in 2.039 (reported by Gareth Tunley).

    - [RT #134993] Calling open($filename) followed by saveas($same_filename)
      instead of update() resulted in a corrupt PDF in 2.039, which no longer
      reads the entire file into memory on open (reported by Marco Pessotto).

    - [RT #134957] Fix encoding of \n in a PDF string containing non-printable
      characters (reported by Stuart Henderson).

    - [RT #133131] Fix endianness of 64-bit numbers in cross-reference stream
      widths array (reported by Christopher Papademetrious, fix by Vadim Repin).


2.039     2021-03-04

    - PDF::API2->open($filename) no longer reads the entire file into memory
      before working on it, instead reading from the file as needed.  This
      results in a substantial reduction in memory usage and start-up time for
      large PDF files, particularly in cases where the calling script doesn't
      need to access all of the contents of the PDF.

    - PDF files containing cross-reference streams can now be modified and saved
      normally.  Previously, they were read-only.

    - $text->paragraph(...) and $text->paragraphs(...) (formerly "section") are
      no longer undocumented and experimental.  If you were previously using
      them at your own risk, note that "-spillover" is no longer an option (text
      will always wrap inside the specified width if possible).  In addition,
      paragraphs(...) no longer collapses consecutive newlines.
