@@ -13,6 +13,10 @@
 
     - Expand PNM support to include all image types.
 
+    - [RT #131657] Disable recursion warnings while releasing (destroying) PDF
+      indirect objects, which can be highly-interconnected (reported by Leon
+      Winter).
+
 
 2.040     2021-04-13
 
